chore: The fun begin
- the api is working properly and the frontend libraries are setup

--- a/libs/design-system/src/tokens/_tokens.scss
+++ b/libs/design-system/src/tokens/_tokens.scss
@@ -1,6 +1,6 @@
-@use "./mixins";
-@use "./colors";
-@use "./spacing";
-@use "./typography";
-@use "./variant";
-@use "./animations";
+@import "./mixins";
+@import "./colors";
+@import "./spacing";
+@import "./typography";
+@import "./variant";
+@import "./animations";
