--- a/apps/portal/src/styles.scss
+++ b/apps/portal/src/styles.scss
@@ -1,2 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~antd/dist/antd.css';
+@import '../../../libs/design-system/src/tokens/tokens';
